test/corpus/fail/M0118.mo
=========
M0118.mo
=========

let (_, _) = ()

---

(source_file
  (let_dec
    (tup_pat
      (wild_pat)
      (wild_pat))
    (par_exp)))
